@@ -122,10 +122,14 @@ class Dispatch(object):
         "QueryInterface is forwarded to the real com object."
         return self._comobj.QueryInterface(*args)
 
-    def __cmp__(self, other): 	 
-        if not isinstance(other, Dispatch): 	 
-            return 1 	 
+    def __cmp__(self, other):
+        if not isinstance(other, Dispatch):
+            return 1
         return cmp(self._comobj, other._comobj)
+
+    def __eq__(self, other):
+        return isinstance(other, Dispatch) and \
+               self._comobj == other._comobj
 
     def __getattr__(self, name):
         """Get a COM attribute."""
@@ -196,10 +200,13 @@ class Dispatch(object):
                                     *args)
 
     def __getitem__(self, arg):
-        return self._comobj._invoke(DISPID_VALUE,
-                                    DISPATCH_METHOD | DISPATCH_PROPERTYGET,
-                                    0,
-                                    *[arg])
+        try:
+            return self._comobj._invoke(DISPID_VALUE,
+                                        DISPATCH_METHOD | DISPATCH_PROPERTYGET,
+                                        0,
+                                        *[arg])
+        except comtypes.COMError:
+            return iter(self)[arg]
 
     def __setitem__(self, name, value):
         if comtypes._is_object(value):
