@@ -1,5 +1,9 @@
 2008-12-19  Thomas Heller  <theller@python.net>
 
+	* comtypes.client.lazybind.Dipatch:
+	If __getitem__ fails the get the indexed default value, try
+	NewENUM.  Implement __eq__ for Python 3 compatibility.
+
 	* Fix a problem with SAFEARRAYs where the contained data was
 	released too early.
 
